style(merlin-www-section-feature): align items to stretch, ie fix, forces long lines to wrap

--- a/packages/merlin-www-section-feature/sass/tatler/_tatler_base.scss
+++ b/packages/merlin-www-section-feature/sass/tatler/_tatler_base.scss
@@ -50,7 +50,7 @@
 }
 
 .c-feature__content {
-    align-items: center;
+    align-items: stretch;
     background: $white;
     direction: ltr;
     display: flex;
